<resources>
    <string name="app_name">LocMess</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>

    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="action_register">Sign Up</string>
    <string name="confirm_password">Confirm Password </string>
    <string name="title_activity_register">Register</string>
    <string name="error_password_equals">Passwords must be equal</string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="location_name">Name</string>
    <string name="location_submit_button_text">Submit</string>
    <string name="location_radius">Location Radius (meters)</string>


    <string name="location_type_GPS">GPS</string>
    <string name="location_type_WIFI">Wifi hotspot</string>
    <string name="location_type_BLE">Bluetooth Beacon</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="title_activity_create_message">CreateMessage</string>


    <!-- Strings related to create message -->
    <string name="message_input">write your message here</string>
    <string name="start_date_input">pick Start Date</string>
    <string name="start_time_input">pick Start Time</string>
    <string name="end_date_input">pick End Date</string>
    <string name="end_time_input">pick End Time</string>

    <string name="submit_input">Submit!</string>


</resources>
