<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pt.ulisboa.tecnico.cmov.locmess.CreateMessage">

    <EditText
        android:id="@+id/messageContent"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:ems="10"
        android:hint="@string/message_input"
        android:inputType="textMultiLine"
        app:layout_constraintDimensionRatio="w,1:1"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/startDate"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="56dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="45dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startDate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/start_date_input"
        android:onClick="showDatePickerDialog"


        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/startTime"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/startTime" />

    <Button
        android:id="@+id/endDate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="showDatePickerDialog"


        android:text="@string/end_date_input"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/endTime"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/endTime" />

    <Button
        android:id="@+id/endTime"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:onClick="showDatePickerDialog"


        android:text="@string/end_time_input"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="162dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startTime"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:onClick="showDatePickerDialog"


        android:text="@string/start_time_input"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/endDate"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="54dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/displaytext"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:text="TextView"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="72dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/displaytext2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:text="TextView"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/submit"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/submit"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/submit_input"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="38dp"
        app:layout_constraintTop_toBottomOf="@+id/displaytext"
        android:layout_marginBottom="33dp" />

</android.support.constraint.ConstraintLayout>
