<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_location"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pt.ulisboa.tecnico.cmov.locmess.AddLocationActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:id="@+id/location_name_text"
        android:hint="@string/location_name" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/location_submit_button"
        android:layout_alignLeft="@+id/location_radius_text"
        android:layout_alignStart="@+id/location_radius_text"
        android:layout_marginTop="37dp"
        android:id="@+id/location_type_info"
        android:layout_alignRight="@+id/location_radius_text"
        android:layout_alignEnd="@+id/location_radius_text" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="65dp"
        android:id="@+id/location_radius_text"
        android:hint="@string/location_radius"
        android:layout_below="@+id/location_name_text"
        android:layout_alignLeft="@+id/location_name_text"
        android:layout_alignStart="@+id/location_name_text" />

    <Spinner
        android:layout_width="match_parent"
        android:id="@+id/location_type"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/location_name_text"
        android:layout_alignLeft="@+id/location_radius_text"
        android:layout_alignStart="@+id/location_radius_text"
        android:layout_alignRight="@+id/location_radius_text"
        android:layout_alignEnd="@+id/location_radius_text" />

    <Button
        android:text="@string/location_submit_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/location_submit_button"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
